<resources>
    <string name="app_name">PlantApp</string>
    <string name="identify_pl">Identify Plants</string>
    <string name="you_can_ide">
You can identify the plants you don\'t know \nthrough your camera
</string>
    <string name="next">NEXT</string>
    <string name="welok">WELOK</string>
    <string name="learn_many_">Learn Many Plants Species</string>
    <string name="let_s_learn">Let\'s learn about the many plant species that \nexist in this world</string>
    <string name="read_many_a">Read Many Articles About Plant</string>
    <string name="let_s_learn_">Let\'s learn more about beautiful plants and read \nmany articles about plants and gardening</string>
    <string name="hello">Hello</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_username">Hello Taylor,</string>
    <string name="let_s_learn_1">Let\'s Learn More About Plants</string>
    <string name="adding_new">ADDING NEW</string>
    <string name="species">SPECIES</string>
    <string name="articles">ARTICLES</string>
    <string name="species1">Species</string>
    <string name="plant_types">Plant Types</string>
</resources>