<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Onboarding.Onboarding1">

    <View
        android:id="@+id/group"
        android:layout_width="255dp"
        android:layout_height="255.14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="147dp"
        android:background="@drawable/group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/identify_pl"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal|top"
        android:text="@string/identify_pl"
        android:textAppearance="@style/identify_pl"
        app:layout_constraintEnd_toEndOf="@+id/group"
        app:layout_constraintStart_toStartOf="@+id/group"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <TextView
        android:id="@+id/you_can_ide"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:gravity="center_horizontal|top"
        android:text="@string/you_can_ide"
        android:textAppearance="@style/you_can_ide"
        app:layout_constraintEnd_toEndOf="@+id/identify_pl"
        app:layout_constraintStart_toStartOf="@+id/identify_pl"
        app:layout_constraintTop_toBottomOf="@+id/identify_pl" />

    <View
        android:id="@+id/ellipse_2_3"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ellipse_2_3"
        app:layout_constraintStart_toStartOf="@+id/you_can_ide"
        app:layout_constraintTop_toBottomOf="@+id/you_can_ide" />

    <View
        android:id="@+id/ellipse_2_4"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_2_4"
        app:layout_constraintEnd_toStartOf="@+id/ellipse_2_5"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_3"
        app:layout_constraintTop_toTopOf="@+id/ellipse_2_3" />

    <View
        android:id="@+id/ellipse_2_5"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:background="@drawable/ellipse_2_5"
        app:layout_constraintEnd_toEndOf="@+id/you_can_ide"
        app:layout_constraintTop_toTopOf="@+id/ellipse_2_4" />

    <Button
        android:id="@+id/btnNextOnboarding1"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_2_4" />


</androidx.constraintlayout.widget.ConstraintLayout>